--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-resource": "~1.2.0",
     "angular-cookies": "~1.2.0",
     "angular-sanitize": "~1.2.0",
+    "angular-animate": "~1.2.0",
     "angular-route": "~1.2.0",
     "moment": "~2.1.0"
   },
