--- a/app/scripts/constants.dist
+++ b/app/scripts/constants.dist
@@ -2,3 +2,4 @@ angular.module('compassgdaApp')
     .constant('FOURSQUARE_API_ADDRESS', 'provide api address with version')
     .constant('FOURSQUARE_CLIENT_ID', 'add client id')
     .constant('FOURSQUARE_CLIENT_SECRET', 'add client secret')
+    .constant('GMAPS_API_ADDRESS', 'provide google maps api address')
