--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "~1.2.0",
     "angular-animate": "~1.2.0",
     "angular-route": "~1.2.0",
-    "moment": "~2.1.0"
+    "moment": "~2.1.0",
+    "speakingurl": "~0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
